--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
                 <div id="js-scroll-suggest" class="scroll-suggest">
                     <div class="scroll-suggest__content">
-                        <div class="Guide">lăn chuột để mở quà</div>
+                        <div class="Guide">lăn chuột/lướt lên</div>
                     </div>
                 </div>
                 <div id="js-scroll-suggest-mask" class="scroll-suggest scroll-suggest--mask">
